// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UpdateContact > should render responsive 1`] = `
<DocumentFragment>
  <div
    class="flex overflow-y-hidden fixed inset-0 z-50 w-full md:py-20 dark:bg-opacity-80 custom-scroll overflow-overlay bg-theme-secondary-900/40 backdrop-blur-xl dark:bg-black-rgba/40"
    data-testid="Modal__overlay"
  >
    <div
      class="flex-1 max-w-full md:px-10 md:m-auto md:max-w-2xl"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col px-6 pt-4 min-h-full shadow-2xl sm:mb-0 md:p-8 md:h-auto md:rounded-xl bg-theme-background"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-4 mr-6 rounded transition-all duration-100 ease-linear md:mt-8 md:mr-8 hover:text-white bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-200 dark:hover:bg-theme-primary-500 dark:hover:text-white hover:bg-theme-primary-800"
        >
          <button
            class="inline-flex relative justify-center items-center p-3 w-8 h-8 font-semibold leading-tight text-center rounded border-none duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden focus:outline-hidden focus:ring-theme-primary-400"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="flex relative flex-col flex-1 space-y-1.5"
        >
          <h2
            class="mb-0 max-w-[calc(100%_-_32px)] text-lg font-bold md:pt-0 md:text-2xl"
          >
            Edit Contact
          </h2>
          <div
            class="flex flex-col flex-1"
          >
            <div
              class="mt-8"
            >
              <form
                class="space-y-5"
                data-testid="contact-form"
              >
                <fieldset
                  class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
                >
                  <label
                    class="FormLabel text-theme-secondary-text hover:text-theme-primary-600! mb-2 flex text-sm leading-[17px] font-semibold transition-colors duration-100"
                    data-testid="FormLabel"
                    for="name"
                  >
                    Name
                  </label>
                  <div
                    class="flex overflow-hidden items-center px-4 space-x-2 w-full h-12 rounded border transition-colors duration-200 appearance-none sm:h-14 focus-within:ring-1 text-theme-text border-theme-secondary-400 bg-theme-background dark:border-theme-secondary-700 focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600"
                  >
                    <div
                      class="flex relative flex-1 h-full"
                    >
                      <input
                        autocomplete="off"
                        class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 w-full border-none text-sm! sm:text-base!"
                        data-testid="contact-form__name-input"
                        name="name"
                        type="text"
                        value="Brian"
                      />
                    </div>
                  </div>
                </fieldset>
                <fieldset
                  class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
                  data-testid="ContactForm__address"
                >
                  <label
                    class="FormLabel text-theme-secondary-text hover:text-theme-primary-600! mb-2 flex text-sm leading-[17px] font-semibold transition-colors duration-100"
                    data-testid="FormLabel"
                    for="address"
                  >
                    Address
                  </label>
                  <div
                    class="flex overflow-hidden items-center px-4 space-x-2 w-full h-12 rounded border transition-colors duration-200 appearance-none sm:h-14 focus-within:ring-1 text-theme-text border-theme-secondary-400 bg-theme-background dark:border-theme-secondary-700 focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600"
                  >
                    <div
                      class="flex relative flex-1 h-full"
                    >
                      <input
                        autocomplete="off"
                        class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 w-full border-none text-sm! sm:text-base!"
                        data-testid="contact-form__address-input"
                        name="address"
                        profile="[object Object]"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </fieldset>
                <div
                  class="flex justify-between w-full border-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                >
                  <div
                    class="bg-theme-background shadow-footer-smooth dark:shadow-footer-smooth-dark fixed inset-x-0 bottom-0 flex gap-3 px-8 py-3 sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none dark:bg-black sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none pb-3 sm:pb-0"
                  >
                    <button
                      class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-dark-800 dark:text-theme-dark-50 dark:hover:bg-theme-primary-500 hover:bg-theme-primary-800 focus:outline-hidden focus:ring-theme-primary-400"
                      data-testid="contact-form__cancel-btn"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Cancel
                      </div>
                    </button>
                    <button
                      class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center text-white rounded duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-600 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500 focus:outline-hidden focus:ring-theme-primary-400"
                      data-testid="contact-form__save-btn"
                      type="submit"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Save
                      </div>
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateContact > should render responsive 2`] = `
<DocumentFragment>
  <div
    class="flex overflow-y-hidden fixed inset-0 z-50 w-full md:py-20 dark:bg-opacity-80 custom-scroll overflow-overlay bg-theme-secondary-900/40 backdrop-blur-xl dark:bg-black-rgba/40"
    data-testid="Modal__overlay"
  >
    <div
      class="flex-1 max-w-full md:px-10 md:m-auto md:max-w-2xl"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col px-6 pt-4 min-h-full shadow-2xl sm:mb-0 md:p-8 md:h-auto md:rounded-xl bg-theme-background"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-4 mr-6 rounded transition-all duration-100 ease-linear md:mt-8 md:mr-8 hover:text-white bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-200 dark:hover:bg-theme-primary-500 dark:hover:text-white hover:bg-theme-primary-800"
        >
          <button
            class="inline-flex relative justify-center items-center p-3 w-8 h-8 font-semibold leading-tight text-center rounded border-none duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden focus:outline-hidden focus:ring-theme-primary-400"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="flex relative flex-col flex-1 space-y-1.5"
        >
          <h2
            class="mb-0 max-w-[calc(100%_-_32px)] text-lg font-bold md:pt-0 md:text-2xl"
          >
            Edit Contact
          </h2>
          <div
            class="flex flex-col flex-1"
          >
            <div
              class="mt-8"
            >
              <form
                class="space-y-5"
                data-testid="contact-form"
              >
                <fieldset
                  class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
                >
                  <label
                    class="FormLabel text-theme-secondary-text hover:text-theme-primary-600! mb-2 flex text-sm leading-[17px] font-semibold transition-colors duration-100"
                    data-testid="FormLabel"
                    for="name"
                  >
                    Name
                  </label>
                  <div
                    class="flex overflow-hidden items-center px-4 space-x-2 w-full h-12 rounded border transition-colors duration-200 appearance-none sm:h-14 focus-within:ring-1 text-theme-text border-theme-secondary-400 bg-theme-background dark:border-theme-secondary-700 focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600"
                  >
                    <div
                      class="flex relative flex-1 h-full"
                    >
                      <input
                        autocomplete="off"
                        class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 w-full border-none text-sm! sm:text-base!"
                        data-testid="contact-form__name-input"
                        name="name"
                        type="text"
                        value="Brian"
                      />
                    </div>
                  </div>
                </fieldset>
                <fieldset
                  class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
                  data-testid="ContactForm__address"
                >
                  <label
                    class="FormLabel text-theme-secondary-text hover:text-theme-primary-600! mb-2 flex text-sm leading-[17px] font-semibold transition-colors duration-100"
                    data-testid="FormLabel"
                    for="address"
                  >
                    Address
                  </label>
                  <div
                    class="flex overflow-hidden items-center px-4 space-x-2 w-full h-12 rounded border transition-colors duration-200 appearance-none sm:h-14 focus-within:ring-1 text-theme-text border-theme-secondary-400 bg-theme-background dark:border-theme-secondary-700 focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600"
                  >
                    <div
                      class="flex relative flex-1 h-full"
                    >
                      <input
                        autocomplete="off"
                        class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 w-full border-none text-sm! sm:text-base!"
                        data-testid="contact-form__address-input"
                        name="address"
                        profile="[object Object]"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </fieldset>
                <div
                  class="flex justify-between w-full border-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                >
                  <button
                    class="inline-flex relative justify-center items-center py-3 px-5 mt-0 space-x-3 text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer sm:mt-8 dark:text-white hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-danger-100 text-theme-danger-400 h-min dark:bg-theme-danger-400 dark:hover:bg-theme-danger-300 hover:bg-theme-danger-400 focus:outline-hidden focus:ring-theme-danger-300"
                    data-testid="contact-form__delete-btn"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div>
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            id="trash"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                      <span>
                        Delete Contact
                      </span>
                    </div>
                  </button>
                  <div
                    class="bg-theme-background shadow-footer-smooth dark:shadow-footer-smooth-dark fixed inset-x-0 bottom-0 flex gap-3 px-8 py-3 sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none dark:bg-black sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none pb-3 sm:pb-0"
                  >
                    <button
                      class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-dark-800 dark:text-theme-dark-50 dark:hover:bg-theme-primary-500 hover:bg-theme-primary-800 focus:outline-hidden focus:ring-theme-primary-400"
                      data-testid="contact-form__cancel-btn"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Cancel
                      </div>
                    </button>
                    <button
                      class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center text-white rounded duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-600 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500 focus:outline-hidden focus:ring-theme-primary-400"
                      data-testid="contact-form__save-btn"
                      type="submit"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Save
                      </div>
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateContact > should render responsive 3`] = `
<DocumentFragment>
  <div
    class="flex overflow-y-hidden fixed inset-0 z-50 w-full md:py-20 dark:bg-opacity-80 custom-scroll overflow-overlay bg-theme-secondary-900/40 backdrop-blur-xl dark:bg-black-rgba/40"
    data-testid="Modal__overlay"
  >
    <div
      class="flex-1 max-w-full md:px-10 md:m-auto md:max-w-2xl"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col px-6 pt-4 min-h-full shadow-2xl sm:mb-0 md:p-8 md:h-auto md:rounded-xl bg-theme-background"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-4 mr-6 rounded transition-all duration-100 ease-linear md:mt-8 md:mr-8 hover:text-white bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-200 dark:hover:bg-theme-primary-500 dark:hover:text-white hover:bg-theme-primary-800"
        >
          <button
            class="inline-flex relative justify-center items-center p-3 w-8 h-8 font-semibold leading-tight text-center rounded border-none duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden focus:outline-hidden focus:ring-theme-primary-400"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="flex relative flex-col flex-1 space-y-1.5"
        >
          <h2
            class="mb-0 max-w-[calc(100%_-_32px)] text-lg font-bold md:pt-0 md:text-2xl"
          >
            Edit Contact
          </h2>
          <div
            class="flex flex-col flex-1"
          >
            <div
              class="pr-10 text-sm whitespace-pre-line md:pr-0 md:text-base text-theme-secondary-text"
            >
              Enter the information below to update or delete the Contact.
            </div>
            <div
              class="mt-8"
            >
              <form
                class="space-y-5"
                data-testid="contact-form"
              >
                <fieldset
                  class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
                >
                  <label
                    class="FormLabel text-theme-secondary-text hover:text-theme-primary-600! mb-2 flex text-sm leading-[17px] font-semibold transition-colors duration-100"
                    data-testid="FormLabel"
                    for="name"
                  >
                    Name
                  </label>
                  <div
                    class="flex overflow-hidden items-center px-4 space-x-2 w-full h-12 rounded border transition-colors duration-200 appearance-none sm:h-14 focus-within:ring-1 text-theme-text border-theme-secondary-400 bg-theme-background dark:border-theme-secondary-700 focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600"
                  >
                    <div
                      class="flex relative flex-1 h-full"
                    >
                      <input
                        autocomplete="off"
                        class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 w-full border-none text-sm! sm:text-base!"
                        data-testid="contact-form__name-input"
                        name="name"
                        type="text"
                        value="Brian"
                      />
                    </div>
                  </div>
                </fieldset>
                <fieldset
                  class="[&:focus-within_.FormLabel]:text-theme-primary-600 dark:[&:focus-within_.FormLabel]:text-theme-primary-500 flex min-w-0 flex-col"
                  data-testid="ContactForm__address"
                >
                  <label
                    class="FormLabel text-theme-secondary-text hover:text-theme-primary-600! mb-2 flex text-sm leading-[17px] font-semibold transition-colors duration-100"
                    data-testid="FormLabel"
                    for="address"
                  >
                    Address
                  </label>
                  <div
                    class="flex overflow-hidden items-center px-4 space-x-2 w-full h-12 rounded border transition-colors duration-200 appearance-none sm:h-14 focus-within:ring-1 text-theme-text border-theme-secondary-400 bg-theme-background dark:border-theme-secondary-700 focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600"
                  >
                    <div
                      class="flex relative flex-1 h-full"
                    >
                      <input
                        autocomplete="off"
                        class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 w-full border-none text-sm! sm:text-base!"
                        data-testid="contact-form__address-input"
                        name="address"
                        profile="[object Object]"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </fieldset>
                <div
                  class="flex justify-between w-full border-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                >
                  <button
                    class="inline-flex relative justify-center items-center py-3 px-5 mt-0 space-x-3 text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer sm:mt-8 dark:text-white hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-danger-100 text-theme-danger-400 h-min dark:bg-theme-danger-400 dark:hover:bg-theme-danger-300 hover:bg-theme-danger-400 focus:outline-hidden focus:ring-theme-danger-300"
                    data-testid="contact-form__delete-btn"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div>
                        <div
                          style="height: 16px; width: 16px;"
                        >
                          <svg
                            id="trash"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <path
                                d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                      <span>
                        Delete Contact
                      </span>
                    </div>
                  </button>
                  <div
                    class="bg-theme-background shadow-footer-smooth dark:shadow-footer-smooth-dark fixed inset-x-0 bottom-0 flex gap-3 px-8 py-3 sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:shadow-none dark:bg-black sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none pb-3 sm:pb-0"
                  >
                    <button
                      class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center rounded duration-100 ease-linear cursor-pointer hover:text-white focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-100 text-theme-primary-600 dark:bg-theme-dark-800 dark:text-theme-dark-50 dark:hover:bg-theme-primary-500 hover:bg-theme-primary-800 focus:outline-hidden focus:ring-theme-primary-400"
                      data-testid="contact-form__cancel-btn"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Cancel
                      </div>
                    </button>
                    <button
                      class="inline-flex relative justify-center items-center py-3 px-5 space-x-3 text-base font-semibold leading-tight text-center text-white rounded duration-100 ease-linear cursor-pointer focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden bg-theme-primary-600 navy:hover:bg-theme-primary-800 dark:hover:bg-theme-primary-500 focus:outline-hidden focus:ring-theme-primary-400"
                      data-testid="contact-form__save-btn"
                      type="submit"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        Save
                      </div>
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
